--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Brands realize true Programmatic intent, identity, and purchasing loyalty frameworks.</li>
         </ul>
         <p class="right">Los Angeles, CA | April 2019 - May 2019</p>
-        <p class="bold">Coldwell Banker</p>
+        <p class="bold">California Assocation of Realtors®</p>
         <p>Advertising Operations – Digital Ads Trafficking (Contract)</p>
         <ul>
             <li>Built ad campaigns from OpenX on company’s new GAM serving CAR.org and Zipform.
@@ -52,12 +52,22 @@
                 weekly newsletters.</li>
         </ul>
         <p class="right">San Francisco/Los Angeles, CA | January 2015 - January 2018</p>
-        <p class="bold">Client Sales Specialist – Lead Generations and Market Segmentation (Part-time)</p>
-        <p>Advertising Operations – Digital Ads Trafficking (Contract)</p>
+        <p class="bold">Coldwell Banker</p>
+        <p>Marketing Coordinator – Social Content and Presentations (Part-time)</p>
+        <ul>
+            <li>Increased the team' s business production by 10% in consecutive years achieving prestige title awards of
+                Top 100 SF and Intl. Presidential Premier.</li>
+            <li>Created, designed, and executed new marketing content for property listings that distributes into our
+                channels of social, MLS, and emails to target different brackets of clients.</li>
+            <li>Created and updated the Buyer and Seller PowerPoint presentations with new design concepts and market
+                comps. for first time meetings with clients.</li>
+        </ul>
+        <p class="right">San Francisco, CA | January 2013 - December 2014</p>
+        <p class="bold">Comcast</p>
+        <p>Client Sales Specialist – Lead Generations and Market Segmentation (Part-time)</p>
         <ul>
             <li>Expanded the Business Class Division network into San Francisco, Chinatown area with service to an
-                untouched demographics of clients.
-            </li>
+                untouched demographics of clients.</li>
             <li>Sourced leads, developed pipelines, and bridged language barriers of interested business owners.</li>
             <li>Conducted cold calls, on-site visits, and scheduled meetings to further conversions.</li>
         </ul>
@@ -82,4 +92,3 @@
 
 
 </html>
-
