--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 comps. for first time meetings with clients.</li>
         </ul>
         <p class="right">San Francisco, CA | January 2013 - December 2014</p>
-        <p class="bold">Comcast</p>
+        <p class="bold">Comcast Inc.</p>
         <p>Client Sales Specialist – Lead Generations and Market Segmentation (Part-time)</p>
         <ul>
             <li>Expanded the Business Class Division network into San Francisco, Chinatown area with service to an
