--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Brands realize true Programmatic intent, identity, and purchasing loyalty frameworks.</li>
         </ul>
         <p class="right">Los Angeles, CA | April 2019 - May 2019</p>
-        <p class="bold">California Assocation of Realtors®</p>
+        <p class="bold">California Association of Realtors®</p>
         <p>Advertising Operations – Digital Ads Trafficking (Contract)</p>
         <ul>
             <li>Built ad campaigns from OpenX on company’s new GAM serving CAR.org and Zipform.
