--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <p>&nbsp;</p>
         <a class="contact-me" href="mailto:johnzfung@gmail.com" target="_blank">Email</a>
         <p>&nbsp;</p>
-        <p>- John Zhen Fung</p>
+        <p>: John Zhen Fung</p>
     </div>
 </body>
 
