--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <p>&nbsp;</p>
         <p class="bold">Work Experience</p>
         <hr>
-        <p class="right">Los Angeles, CA | August 2019 - Present</p>
-        <p class="bold">Internet Brands</p>
+        <p> <strong>Internet Brands</strong>&nbsp;| Los Angeles, CA | August 2019 - Present</p>
         <p>Programmatic Associate – AdXs, DSPs, and SSPs (Full-time)</p>
         <ul>
             <li>Strategically monetized over 1B+ and 30M+ unique monthly impressions on a portfolio of verticals such
@@ -40,8 +39,7 @@
             <li>Managed a DMP, introduced new ad-tech, and increased advertising performance MoM to help Internet
                 Brands realize true Programmatic intent, identity, and purchasing loyalty frameworks.</li>
         </ul>
-        <p class="right">Los Angeles, CA | April 2019 - May 2019</p>
-        <p class="bold">California Association of Realtors®</p>
+        <p> <strong>California Association of Realtors®</strong>&nbsp;| Los Angeles, CA | April 2019 - May 2019</p>
         <p>Advertising Operations – Digital Ads Trafficking (Contract)</p>
         <ul>
             <li>Built ad campaigns from OpenX on company’s new GAM serving CAR.org and Zipform.
@@ -51,8 +49,7 @@
             <li>Drafted and perform A/B testing with Pardot of new ad content to gain insights for clients featured in
                 weekly newsletters.</li>
         </ul>
-        <p class="right">San Francisco/Los Angeles, CA | January 2015 - January 2018</p>
-        <p class="bold">Coldwell Banker</p>
+        <p> <strong>Coldwell Banker</strong>&nbsp;| San Francisco/Los Angeles, CA | January 2015 - January 2018</p>
         <p>Marketing Coordinator – Social Content and Presentations (Part-time)</p>
         <ul>
             <li>Increased the team' s business production by 10% in consecutive years achieving prestige title awards of
@@ -62,8 +59,7 @@
             <li>Created and updated the Buyer and Seller PowerPoint presentations with new design concepts and market
                 comps. for first time meetings with clients.</li>
         </ul>
-        <p class="right">San Francisco, CA | January 2013 - December 2014</p>
-        <p class="bold">Comcast Inc.</p>
+        <p> <strong>Comcast Inc.</strong>&nbsp;| San Francisco, CA | January 2013 - December 2014</p>
         <p>Client Sales Specialist – Lead Generations and Market Segmentation (Part-time)</p>
         <ul>
             <li>Expanded the Business Class Division network into San Francisco, Chinatown area with service to an
@@ -83,8 +79,7 @@
         </ul>
         <p class="bold">Education</p>
         <hr>
-        <p class="right">Irvine, CA | May 2018</p>
-        <p class="bold">University of California Irvine, School of Social Sciences</p>
+        <p> <strong>University of California, Irvine</strong>&nbsp;| Irvine, CA | May 2018</p>
         <p class="bold">Bachelor of Arts - Business Economics</p>
         <p>Relevant Coursework: Advanced Calculus; Statistic Frameworks; Applied Econometrics; Business Management</p>
     </div>
