--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="bold">Education</p>
         <hr>
         <p> <strong>University of California, Irvine</strong>&nbsp;| Irvine, CA | May 2018</p>
-        <p class="bold">Bachelor of Arts - Business Economics</p>
+        <p><strong>Bachelor of Arts - Business Economics</strong></p>
         <p>Relevant Coursework: Advanced Calculus; Statistic Frameworks; Applied Econometrics; Business Management</p>
     </div>
 </body>
