--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhen Fung</title>
+    <title>John Fung</title>
     <link rel="stylesheet" href="./resources/css/index.css" </head>
 
 <body>
@@ -22,7 +22,7 @@
 
     <!-- Info section-->
     <div class="info-section">
-        <h1 class="bold" id="name">John Zhen Fung </h1>
+        <h1 class="bold" id="name">John Fung </h1>
         <p>&nbsp;</p>
         <p class="bold">Work Experience</p>
         <hr>
