--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Zhen Fung</title>
+    <title>John Fung</title>
     <link rel="stylesheet" href="./resources/css/index.css" </head>
 
 <body>
@@ -23,7 +23,7 @@
         <p>&nbsp;</p>
         <a class="contact-me" href="mailto:johnzfung@gmail.com" target="_blank">Email</a>
         <p>&nbsp;</p>
-        <p>: John Zhen Fung</p>
+        <p>: John Fung</p>
     </div>
 </body>
 
