--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>
             <li>Interfaced and onboarded both buy and sell-side vendors, utilizing new programmatic display, native,
                 and video technologies with custom campaign executions and scaling advertising expansions.</li>
-            <li>Optimized Direct($1.5M+) and Programmatic($1M+) monthly campaigns with unique advertising
+            <li>Optimized Direct and Programmatic monthly campaigns with unique advertising
                 strategies requiring cross-functional internal work of tech, product, analyst, and sales teams.</li>
             <li>Managed a DMP, introduced new ad-tech, and increased advertising performance MoM to help Internet
                 Brands realize true Programmatic intent, identity, and purchasing loyalty frameworks.</li>
