--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
         <p> <strong>University of California, Irvine</strong>&nbsp;| Irvine, CA | May 2018</p>
         <p><strong>Bachelor of Arts - Business Economics</strong></p>
         <p>Relevant Coursework: Advanced Calculus; Statistic Frameworks; Applied Econometrics; Business Management</p>
+        <hr>
+        <a href="./resources/resume/John.Zhen.Fung_Resume.pdf" download>
+            <p class="resume"><button>PDF Version</button></p>
+        </a>
     </div>
+
 </body>
 
 
