--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
             <li><a href="./contact.html">Contact</a></li>
         </u1>
     </nav>
-    <!-- Banner section-->
-    <div class="banner">
+    <div class="full-height">
+        <h1 class="typing">I am John Fung</h1>
         <img id="profile-pic" src="./resources/images/ProfilePic.jpg" alt="John Zhen Fung" />
     </div>
 
     <!-- Info section-->
     <div class="info-section">
-        <h1 class="bold" id="name">John Fung </h1>
-        <p>&nbsp;</p>
         <p class="bold">Work Experience</p>
         <hr>
         <p> <strong>Internet Brands</strong>&nbsp;| Los Angeles, CA | August 2019 - Present</p>
