--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <title>John Fung</title>
     <link rel="stylesheet" href="./resources/css/index.css" </head>
 
-<body>
-    <!-- Navbar sction-->
-    <nav class="navbar">
-        <u1>
-            <li><a class="active" href="./index.html">Resume</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </u1>
-    </nav>
-    <div class="full-height">
-        <h1 class="typing">I am John Fung</h1>
-        <img id="profile-pic" src="./resources/images/ProfilePic.jpg" alt="John Zhen Fung" />
-    </div>
-
+    <body>
+        <!-- Navbar sction-->
+        <nav class="navbar">
+            <u1>
+                <li><a class="active" href="./index.html">Resume</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </u1>
+        </nav>
+        <div class="full-height">
+            <h1 class="typing">></h1>
+            <h1 class="name">John Fung</h1>
+            <img id="profile-pic" src="./resources/images/ProfilePic.jpg" alt="John Zhen Fung" />
+        </div>
+    
     <!-- Info section-->
     <div class="info-section">
         <p class="bold">Work Experience</p>
